# MechInterp

./: .gitignore  pyproject.toml  train.py
1LayerModel/: OneLM.yaml  model.py  roughnote.ipynb  statedict_mapping.py
1LayerModel/Models/TinyStories-1L-21M/: config.json  readme.md
GPT-2/: bigram.py  dataset_links.md  gpt2.py  gpt2_rope.py  load_gpt2_weights.py  pyproject.toml  roughnote.ipynb  train.py
OneLayerModel/: gelu_output.pt  roughnote.ipynb  statedict_mapping.py
SAE/: SAE_FullScript.ipynb  activation_collector.py  collect_activations.py  compute_activations.py  model.py  sae_analysis_results.json  train.py  trainer.py
SAEs/: Sparse_Autoencoder.ipynb
Utils/: __init__.py  generation_config.py  model_config.py  transformer_sampler.py
