[project]
name = "gpt-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "circuitsvis>=1.43.3",
    "datasets>=4.2.0",
    "einops>=0.8.1",
    "frozendict>=2.4.6",
    "gradio>=5.49.1",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "jaxtyping>=0.3.2",
    "matplotlib>=3.10.6",
    "nbformat>=5.10.4",
    "numpy>=2.3.3",
    "openai>=2.2.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "torch>=2.8.0",
    "torchmetrics>=1.8.2",
    "tqdm>=4.67.1",
    "transformer-lens>=2.15.4",
    "transformers>=4.56.2",
    "typeguard>=4.4.4",
]
