[project]
name = "gpt-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "einops>=0.8.1",
    "ipykernel>=6.30.1",
    "jaxtyping>=0.3.2",
    "matplotlib>=3.10.6",
    "nbformat>=5.10.4",
    "numpy>=2.3.3",
    "openai>=2.2.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "torchtyping>=0.1.5",
    "tqdm>=4.67.1",
    "transformer-lens>=2.9.0",
    "transformers>=4.56.2",
]
